het maken van partials

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,13 +2,16 @@
 <html>
 <head>
     <meta charset="utf-8">
-     <link rel="stylesheet" href="/static/public/style.css">
-    <script src="/static/public/script.js"></script>
+     <link rel="stylesheet" href="static/public/css/style.css">
+    <script src="static/public/script/script.js"></script>
     <title>Matching-App</title>
 </head>
 <body>
  
+    {{>header}}
+
     {{{body}}}
  
+ <footer>Copyright Ashley</footer>
 </body>
 </html>
