dynamic data uitgeprobeert

--- a/views/recommendations.handlebars
+++ b/views/recommendations.handlebars
@@ -1,1 +1,10 @@
 <h1>todays recommendations</h1>
+
+{{#each accounts}}
+  <div>
+    <h2>{{name}}</h2>
+    <p>{{age}}</p>
+    <p>{{location}}</p>
+  </div>
+{{/each}}
+
