--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-     <link rel="stylesheet" href="static/public/css/style.css">
-    <script src="static/public/script/script.js"></script>
+     <link rel="stylesheet" href="/css/style.css">
+    <script src="/script/script.js"></script>
     <title>Matching-App</title>
 </head>
 <body>
- 
+
     {{>header}}
     {{{body}}}
  
