dynamic data uitgeprobeerd

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,8 @@
-body {background-color: rgb(34,34,57);}
+body {background-color:whitesmoke;}
 
 p {
     color:brown;
 }
 
-footer{background-color: cadetblue;}
+footer{background-color: cadetblue;} 
+
