--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,10 @@
 
     {{>header}}
     {{{body}}}
- 
- <footer>Copyright Ashley</footer>
+
+    {{>navigation}}
+
+    {{>footer}}
+
 </body>
 </html>
