--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,30 @@
-body {background-color:whitesmoke;}
+body {
+    background-image: url("/images/bgshape.png");
+    background-color: #222239;
+    background-repeat: no-repeat;
+   background-attachment: fixed; 
+   background-size: cover;
+  
 
+   }
+
+   h1, h2{color:whitesmoke;}
 p {
-    color:brown;
+    color:white;
 }
 
 footer{background-color: cadetblue;} 
 
+div {display: flex;
+background-attachment: #222239;}
+
+div.accounts{
+    display: block;
+}
+
+/*div.bg {
+    width: 100px;
+    height: 100px;
+    border-radius: 530% 0% 100% 70%;
+    background-color: tomato;
+}*/
