--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,4 +1,4 @@
 <header>
-<img src="images/dumbell.png">
-<img src="images/instellingen.png">
+<img id="dumbell" src="images/dumbell.png">
+<img id="instellingen"src="images/instellingen.png">
 </header>
