--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -1,8 +1,2 @@
-
-
-  <div class='accounts'>
-    <h2>{{name}}</h2>
-    <p>{{age}}</p>
-    <p>{{location}}</p>
-  </div>
+<h1>user profile pagina</h1>
   
