--- a/views/partials/navigation.handlebars
+++ b/views/partials/navigation.handlebars
@@ -1,7 +1,7 @@
-<div>
-<img src="images/aanbevelingen.png">
-   <img src="images/berichten.png">
-   <img src="images/home.png">
-   <img src="images/profiel.png">
+<nav>
+   <a href=""><img id="aanbevelingen" src="images/aanbevelingen.png" alt='aanbevelingen'></a>
+   <a href=""><img id="berichten" src="images/berichten.png" alt='berichten'></a>
+   <a href=""><img id="home" src="images/home.png" alt='home'></a>
+   <a href=""><img id="profiel" src="images/profiel.png" alt='profiel'></a>
 
-</div>
+</nav>
