added some extensions

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,3 +1,4 @@
 <header>
-<h1>dit is de header</h1>
+<img id="dumbell" src="images/dumbell.png">
+<img id="instellingen"src="images/instellingen.png">
 </header>
