--- a/views/partials/navigation.handlebars
+++ b/views/partials/navigation.handlebars
@@ -1,6 +1,7 @@
-<div>
-    <p>icon 1</p>
-    <p>icon 2</p>
-    <p>icon 3</p>
-    <p>icon 4</p>
-</div>
+<nav>
+   <a href=""><img id="aanbevelingen" src="images/aanbevelingen.png" alt='aanbevelingen'></a>
+   <a href=""><img id="berichten" src="images/berichten.png" alt='berichten'></a>
+   <a href=""><img id="home" src="images/home.png" alt='home'></a>
+   <a href=""><img id="profiel" src="images/profiel.png" alt='profiel'></a>
+
+</nav>
