--- a/views/recommendations.handlebars
+++ b/views/recommendations.handlebars
@@ -1,10 +1,17 @@
+
+
 <h1>todays recommendations</h1>
 
 {{#each accounts}}
-  <div>
-    <h2>{{name}}</h2>
+  <section class='accounts'>
+   <div>
+    <h1>{{firstName}}</h1>
+    <h2>{{lastName}}</h2>
     <p>{{age}}</p>
-    <p>{{location}}</p>
+    <p>{{location}}away</p>
+  <p><a href="/userprofile"{{accounts.id}}>"Meer info</a></p>
   </div>
+  </section>
+  
 {{/each}}
 
