--- a/views/recommendations.handlebars
+++ b/views/recommendations.handlebars
@@ -1,17 +1,14 @@
-
-
 <h1>todays recommendations</h1>
 
 {{#each accounts}}
-  <section class='accounts'>
-   <div>
+<section class='accounts'>
+  <div>
     <h1>{{firstName}}</h1>
     <h2>{{lastName}}</h2>
     <p>{{age}}</p>
     <p>{{location}}away</p>
-  <p><a href="/userprofile"{{accounts.id}}>"Meer info</a></p>
+    <p><a href="/userprofile" {{#acc1}}>"Meer info</a></p>
   </div>
-  </section>
-  
-{{/each}}
+</section>
 
+{{/each}}
