--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/css/style.css">
-    <script src="/script/script.js"></script>
+    <script src="/script/script.js" defer></script>
     <title>Matching-App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
