--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -1,2 +1,20 @@
-<h1>user profile pagina</h1>
-  
+<h1 class=profiel>user profile pagina</h1>
+
+{{#each profielen}}
+<section class='profiel'>
+    <div>
+        <img src="" alt="">
+        <h1>{{firstName}}</h1>
+        <h2>{{lastName}}</h2>
+        <p>{{age}}</p>
+        <p>{{location}}away</p>
+        <button class='toggle'>meer info</button>
+    </div>
+
+    <div class="info">
+        <p>informatie van gebruiker</p>
+    </div>
+
+</section>
+
+{{/each}}
