--- a/views/recommendations.handlebars
+++ b/views/recommendations.handlebars
@@ -8,6 +8,10 @@
     <h2>{{lastName}}</h2>
     <p>{{age}}</p>
     <p>{{location}}away</p>
+    <div>
+      <a href=''><img id="skipknop" src="images/skipknop.png"></a>
+      <a href=""><img id="likeknop" src="images/likeknop.png"></a>
+    </div>
     <button class='toggle'>meer info</button>
   </div>
 
