--- a/views/partials/navigation.handlebars
+++ b/views/partials/navigation.handlebars
@@ -1,7 +1,8 @@
 <nav>
-   <a href=""><img id="aanbevelingen" src="images/aanbevelingen.png" alt='aanbevelingen'></a>
-   <a href=""><img id="berichten" src="images/berichten.png" alt='berichten'></a>
-   <a href=""><img id="home" src="images/home.png" alt='home'></a>
-   <a href=""><img id="profiel" src="images/profiel.png" alt='profiel'></a>
+
+   <a href="/recommendations"><img id="aanbevelingen" src="images/aanbevelingen.png" alt='aanbevelingen'></a>
+   <a href="/savedprofiles"><img id="dumbell" src="images/dumbell.png">
+      <a href="/chat"><img id="berichten" src="images/berichten.png" alt='berichten'></a>
+      <a href=""><img id="profiel" src="images/profiel.png" alt='profiel'></a>
 
 </nav>
