--- a/views/recommendations.handlebars
+++ b/views/recommendations.handlebars
@@ -1,4 +1,29 @@
 <h1>todays recommendations</h1>
+{{#each accounts}}
+<section class='accounts'>
+  <div>
+    <img src="" alt="">
+    <h1>{{firstName}}</h1>
+    <h2>{{lastName}}</h2>
+    <p>{{age}}</p>
+    <p>{{location}}away</p>
+
+    <button class='toggle'>meer info</button>
+  </div>
+
+  <div class="info">
+    <p>informatie van gebruiker</p>
+  </div>
+
+  <div>
+    <a href=''><img id="skipknop" src="images/skipknop.png"></a>
+    <a href=""><img id="likeknop" src="images/likeknop.png"></a>
+  </div>
+
+</section>
+
+{{/each}}
+
 
 {{#each accounts}}
 <section class='accounts'>
@@ -8,15 +33,117 @@
     <h2>{{lastName}}</h2>
     <p>{{age}}</p>
     <p>{{location}}away</p>
-    <div>
-      <a href=''><img id="skipknop" src="images/skipknop.png"></a>
-      <a href=""><img id="likeknop" src="images/likeknop.png"></a>
-    </div>
+
     <button class='toggle'>meer info</button>
   </div>
 
   <div class="info">
     <p>informatie van gebruiker</p>
+  </div>
+
+  <div>
+    <a href=''><img id="skipknop" src="images/skipknop.png"></a>
+    <a href=""><img id="likeknop" src="images/likeknop.png"></a>
+  </div>
+
+</section>
+
+{{/each}}
+
+{{#each accounts}}
+<section class='accounts'>
+  <div>
+    <img src="" alt="">
+    <h1>{{firstName}}</h1>
+    <h2>{{lastName}}</h2>
+    <p>{{age}}</p>
+    <p>{{location}}away</p>
+
+    <button class='toggle'>meer info</button>
+  </div>
+
+  <div class="info">
+    <p>informatie van gebruiker</p>
+  </div>
+
+  <div>
+    <a href=''><img id="skipknop" src="images/skipknop.png"></a>
+    <a href=""><img id="likeknop" src="images/likeknop.png"></a>
+  </div>
+
+</section>
+
+{{/each}}
+
+{{#each accounts}}
+<section class='accounts'>
+  <div>
+    <img src="" alt="">
+    <h1>{{firstName}}</h1>
+    <h2>{{lastName}}</h2>
+    <p>{{age}}</p>
+    <p>{{location}}away</p>
+
+    <button class='toggle'>meer info</button>
+  </div>
+
+  <div class="info">
+    <p>informatie van gebruiker</p>
+  </div>
+
+  <div>
+    <a href=''><img id="skipknop" src="images/skipknop.png"></a>
+    <a href=""><img id="likeknop" src="images/likeknop.png"></a>
+  </div>
+
+</section>
+
+{{/each}}
+
+{{#each accounts}}
+<section class='accounts'>
+  <div>
+    <img src="" alt="">
+    <h1>{{firstName}}</h1>
+    <h2>{{lastName}}</h2>
+    <p>{{age}}</p>
+    <p>{{location}}away</p>
+
+    <button class='toggle'>meer info</button>
+  </div>
+
+  <div class="info">
+    <p>informatie van gebruiker</p>
+  </div>
+
+  <div>
+    <a href=''><img id="skipknop" src="images/skipknop.png"></a>
+    <a href=""><img id="likeknop" src="images/likeknop.png"></a>
+  </div>
+
+</section>
+
+{{/each}}
+
+{{#each accounts}}
+<section class='accounts'>
+  <div>
+    <img src="" alt="">
+    <h1>{{firstName}}</h1>
+    <h2>{{lastName}}</h2>
+    <p>{{age}}</p>
+    <p>{{location}}away</p>
+
+    <button class='toggle'>meer info</button>
+  </div>
+
+  <div class="info">
+    <p>informatie van gebruiker</p>
+  </div>
+
+  <div>
+    <a href=''><img id="skipknop" src="images/skipknop.png"></a>
+    <a href=""><img id="likeknop" src="images/likeknop.png"></a>
   </div>
 
 </section>
