--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -1,4 +1,4 @@
-<h1 class=profiel>user profile pagina</h1>
+<h1>Saved Profiles</h1>
 
 {{#each profielen}}
 <section class='profiel'>
@@ -6,13 +6,54 @@
         <img src="" alt="">
         <h1>{{firstName}}</h1>
         <h2>{{lastName}}</h2>
-        <p>{{age}}</p>
-        <p>{{location}}away</p>
-        <button class='toggle'>meer info</button>
+        <p>{{age}} years</p>
+        <p>{{location}} away</p>
+        <a href="/chat"><button class=profiel>Start Chatting</button></a>
     </div>
 
-    <div class="info">
-        <p>informatie van gebruiker</p>
+</section>
+
+{{/each}}
+
+{{#each profielen}}
+<section class='profiel'>
+    <div>
+        <img src="" alt="">
+        <h1>{{firstName}}</h1>
+        <h2>{{lastName}}</h2>
+        <p>{{age}} years</p>
+        <p>{{location}} away</p>
+        <a href="/chat"><button class=profiel>Start Chatting</button></a>
+    </div>
+
+</section>
+
+{{/each}}
+
+{{#each profielen}}
+<section class='profiel'>
+    <div>
+        <img src="" alt="">
+        <h1>{{firstName}}</h1>
+        <h2>{{lastName}}</h2>
+        <p>{{age}} years</p>
+        <p>{{location}} away</p>
+        <a href="/chat"><button class=profiel>Start Chatting</button></a>
+    </div>
+
+</section>
+
+{{/each}}
+
+{{#each profielen}}
+<section class='profiel'>
+    <div>
+        <img src="" alt="">
+        <h1>{{firstName}}</h1>
+        <h2>{{lastName}}</h2>
+        <p>{{age}} years</p>
+        <p>{{location}} away</p>
+        <a href="/chat"><button class=profiel>Start Chatting</button></a>
     </div>
 
 </section>
