--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,4 +1,4 @@
-<header>
-<img id="dumbell" src="images/dumbell.png">
-<img id="instellingen"src="images/instellingen.png">
-</header>
+{{!-- <header>
+    <a href="/savedprofiles"><img id="dumbell" src="images/dumbell.png">
+        <img id="instellingen" src="images/instellingen.png">
+</header> --}}
