--- a/views/userprofile.handlebars
+++ b/views/userprofile.handlebars
@@ -1,51 +1,6 @@
 <h1>Saved Profiles</h1>
 
-{{#each profielen}}
-<section class='profiel'>
-    <div>
-        <img src="" alt="">
-        <h1>{{firstName}}</h1>
-        <h2>{{lastName}}</h2>
-        <p>{{age}} years</p>
-        <p>{{location}} away</p>
-        <a href="/chat"><button class=profiel>Start Chatting</button></a>
-    </div>
-
-</section>
-
-{{/each}}
-
-{{#each profielen}}
-<section class='profiel'>
-    <div>
-        <img src="" alt="">
-        <h1>{{firstName}}</h1>
-        <h2>{{lastName}}</h2>
-        <p>{{age}} years</p>
-        <p>{{location}} away</p>
-        <a href="/chat"><button class=profiel>Start Chatting</button></a>
-    </div>
-
-</section>
-
-{{/each}}
-
-{{#each profielen}}
-<section class='profiel'>
-    <div>
-        <img src="" alt="">
-        <h1>{{firstName}}</h1>
-        <h2>{{lastName}}</h2>
-        <p>{{age}} years</p>
-        <p>{{location}} away</p>
-        <a href="/chat"><button class=profiel>Start Chatting</button></a>
-    </div>
-
-</section>
-
-{{/each}}
-
-{{#each profielen}}
+{{#each users}}
 <section class='profiel'>
     <div>
         <img src="" alt="">
