--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,21 +69,17 @@ section.accounts{
   display: block;
   background-color: whitesmoke;
   border-radius: 20%;
-  margin:1em 1em 5em 1em;
+  margin:1em;
   padding:1em 0em 0em 0em;
 }
 
-section.accounts >div > h2{
-  color:black;
-  text-transform: capitalize;
-}
 section.accounts>div>h1{
 color:black;
   display: inline-block;
 text-transform: capitalize;
-font-size:40px;
+font-size:25px;
 margin: 0em;
-padding:0em 3em 0em 0em;}
+padding:0em 0.5em 0em 0em;}
 
 section.accounts >div:nth-of-type(1){
   display: block;
@@ -96,7 +92,7 @@ border-radius: 40%;
 section.accounts >div:nth-of-type(3){
   display: flex;
   align-items: center;
-margin:0.5em auto;
+margin:0em auto;
 justify-content: center;
 border-radius: 40%;
 }
@@ -112,10 +108,24 @@ div.accounts> h1,  h2, p{
  text-align: left;
 }
 
+img.accounts {width:8em;
+  height:8em;
+  display:block;
+  margin:0em auto 0.5em;
+
+}
+
+
+
 #likeknop{padding:1.5em;
 }
 
 #skipknop{padding:1.5em;
+}
+
+section.accounts >div:nth-of-type(2)>p{
+margin:0.5em 2em;
+
 }
 
 
@@ -129,7 +139,7 @@ button.toggle{ background-color:  #E86E61;
   display: inline-block;
   font-size: 10px;
  justify-content: center;
- margin: 1em auto ;
+ margin: 1em auto 0em;
  display: block;
  text-decoration: none;}
 
