--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,9 @@
-<section class='home'>
-    <h1 class="home">welcome back to fit-together</h1>
-    <h2 class="home">see today's recommendations</h2>
-    <a href="/recommendations"><button class="home">Continue</button></a>
-</section>
+<main class="home">
+
+    <section class='home'>
+        <h1 class="home">welcome back to fit-together</h1>
+        <h2 class="home">see today's recommendations</h2>
+        <a href="/recommendations"><button class="home">Continue</button></a>
+    </section>
+
+</main>
