--- a/views/recommendations.handlebars
+++ b/views/recommendations.handlebars
@@ -1,4 +1,4 @@
-<h1>todays recommendations</h1>
+<h1 class="title">todays recommendations</h1>
 
 {{#each users}}
 <section class='accounts'>
@@ -9,7 +9,7 @@
     <p>{{location}} away</p>
 
 
-    <button class='toggle'>meer info</button>
+    <button class='toggle'>Meer Info</button>
   </div>
 
   <div class="info">
