--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,7 @@
 <main class="home">
 
     <section class='home'>
+        <img src="images/likeknop.png" </img>
         <h1 class="home">welcome back to fit-together</h1>
         <h2 class="home">see today's recommendations</h2>
         <a href="/recommendations"><button class="home">Continue</button></a>
