--- a/public/css/style.css
+++ b/public/css/style.css
@@ -245,15 +245,21 @@ button.profiel:hover{
 section.home{
 display: block;
 background-color: whitesmoke;
-border-radius: 20%;
+border-radius: 10%;
 margin:1em;
 position: absolute;
 top:5em;
 }
 
+section.home img{
+  display:block;
+  justify-content: center;
+  margin:2em auto 1em;
+}
+
 h1.home{
 color:black;
-padding:0.5em;
+padding:0.2em;
 }
 
 h2.home{
@@ -268,9 +274,9 @@ display: block;
 button.home{
 background-color:  #E86E61;
 border: none;
-border-radius: 40%;
+border-radius: 20%;
 color: white;
-padding: 1em 2em;
+padding: 0.8em 4em;
 text-align: center;
 text-decoration: none;
 display: inline-block;
