--- a/views/recommendations.handlebars
+++ b/views/recommendations.handlebars
@@ -3,7 +3,7 @@
 {{#each users}}
 <section class='accounts'>
   <div>
-    <img class='accounts' src="/images/girl.jpg" alt="">
+    <img class='accountfoto' src="{{image}}">
     <h1>{{firstName}} {{lastName}}</h1>
     <p>{{age}} years</p>
     <p>{{location}} away</p>
